@@ -15,7 +15,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- * $Id: import.h,v 1.9 2005/02/21 23:23:08 jsegrave Exp $
+ * $Id: import.h,v 1.10 2006/11/09 20:47:16 Superfly_Jon Exp $
  */
 
 #ifndef _IMPORT_H_
@@ -28,5 +28,6 @@ extern int ImportSGG( FILE *pf, char *szFilename );
 extern int ImportTMG( FILE *pf, const char *szFilename );
 extern int ImportBKG( FILE *pf, const char *szFilename );
 extern int ImportSnowieTxt( FILE *pf );
+extern int ImportGAM( FILE *pf, char *szFilename );
 
 #endif
