@@ -1,5 +1,9 @@
 Tue Nov  7 19:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
+	* import.c, gktfile.c : Add money game import for .gam files
+
+Thu Nov  9 20:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
 	* font3d.c, render.c : Minor changes to 3d cube font and 2d point
 		number font to make them look slightly better.
 
